# wing-ide-maya

./: .gitignore  README.md  pyproject.toml
wing/: __init__.py  core.py  execute_wing_code.py  make_menu.py  userSetup.py  wing_installer.py
wing/menu/: connect.py
wing/wing_ide_scripts/: maya_hotkeys.py
